juniper-from-schema/tests/compile_fail/snake_cased_fields_on_types.stderr
error: proc macro panicked
  --> $DIR/snake_cased_fields_on_types.rs:4:1
   |
4  | / graphql_schema! {
5  | |     type Query {
6  | |         snake_cased: String!
7  | |     }
8  | |
9  | |     schema { query: Query }
10 | | }
   | |_^
   |
   = help: message: 
           
           [91merror[0m: Field names must be camelCase, not snake_case
            --> schema:1:14
             |
           1 |    type Query { snake_cased : String ! } schema { query : Query }
             |                 [91m^[0m
           
           This is because Juniper always converts all field names to camelCase
           
           
           aborting due to previous error
           

error: Could not compile `juniper-from-schema-tests`.
